# recommender-systems

./: LICENSE  README.md  collab-filtering-RS.ipynb  content-based-RS.ipynb  deep-learning-based-RS.ipynb  draft.ipynb  federated-learning-based-RS.ipynb  hybrid-RS.ipynb  part1.ipynb  part2.ipynb  pyproject.toml
data/: .gitignore  collab-filtering-RS.pkl  content-based-RS.pkl  naive-RS.pkl
