[tool.poetry]
name = "recommender-systems"
version = "0.1.0"
description = "Implementing various Recommender Systems for Amazon review data."
authors = ["Ilias Antonopoulos <ilias.antonopoulos@yahoo.gr>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/ilias-ant/recommender-systems"
keywords = ["recommender-systems"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ilias-ant/recommender-systems/issues"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black-nb = "^0.7"
mizani = "^0.7.3"
notebook = "^6.4.8"
pandas = "^1.4.0"
plotnine = "^0.8.0"
scikit-learn = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
