[tool.poetry]
name = "recommender-systems"
version = "0.1.0"
description = "Implementing various Recommender Systems for Amazon review data."
authors = ["Ilias Antonopoulos <ilias.antonopoulos@yahoo.gr>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/ilias-ant/recommender-systems"
keywords = ["recommender-systems"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ilias-ant/recommender-systems/issues"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

mizani = "~0.7.3"
nltk = "~3.7"
pandas = "~1.4.0"
plotnine = "~0.8.0"
scikit-learn = "~1.0.2"
scikit-surprise = "~1.1.1"
pydot = "~1.4.2"
graphviz = "~0.19.1"
matplotlib = "~3.5.1"
tensorflow = "~2.8.0"
tensorflow-federated = "~0.20.0"

[tool.poetry.dev-dependencies]
black-nb = "^0.7"
notebook = "^6.4.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
